--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,13 +4,20 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 0.9em;
+  overflow: hidden;
 }
-
+div, h1, h2, h3, h4, h5, h6, li, ul {
+  padding: 0;
+  margin: 0;
+}
+ul {
+  list-style-type: none;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
-
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
