--- a/components/css/Navbar.module.css
+++ b/components/css/Navbar.module.css
@@ -3,9 +3,9 @@
     justify-content: center;
 
     padding: 0.5rem 0;
-    background-color: rgb(133, 58, 89, 0.75);
+    background-color: rgba(58, 112, 133, 0.75);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16);
-    border-bottom: 0.5px solid rgb(109, 31, 57, 0.50);
+    border-bottom: 0.5px solid rgba(31, 93, 109, 0.5);
 }
 .content {
     /* fixed space of 3 rem on sides */
@@ -13,7 +13,7 @@
 
     /* set the width of the div of the flex */
     /* if it shrinks it'll reduce the inner flex space */
-    flex-basis: 65rem;
+    flex-basis: 70rem;
     
     display: flex;
     align-items: center;
