--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 0.9em;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 div, h1, h2, h3, h4, h5, h6, li, ul {
   padding: 0;
