--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 0.9em;
   overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 div, h1, h2, h3, h4, h5, h6, li, ul {
   padding: 0;
