--- a/components/css/Hero.module.css
+++ b/components/css/Hero.module.css
@@ -97,6 +97,28 @@
     
     grid-area: description;
     padding: 3rem 0.5rem;
+
+    display: grid;
+    grid-template-areas: 'top'
+                         'bottom';
+    grid-template-rows: 200px auto;
+}
+.presentation .description .top {
+    grid-area: top;
+}
+.presentation .description .bottom {
+    grid-area: bottom;
+    width: 85%;
+
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 0.5rem;
+    color: rgba(255, 255, 255, 0.50);
+}
+.presentation .description .bottom .locationIcon {
+    filter: brightness(0) invert(1);
 }
 
 .presentation .description .descriptionTitle h1 {
@@ -129,6 +151,9 @@
     filter: brightness(0) invert(1);
 }
 
+.presentation .description .location {
+    height: 100%;
+}
 
 
 
@@ -149,6 +174,11 @@
 @media (max-width: 768px) {
     .content .title h1 {
         font-size: 2rem;
+    }
+    .presentation .description .bottom {
+        padding: 1rem 0rem;
+        justify-content: flex-start;
+        align-items: center;
     }
 }
 
