--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   /* overflow-y: hidden; */
   overflow-x: hidden;
 }
-div, h1, h2, h3, h4, h5, h6, li, ul, p, button {
+div, h1, h2, h3, h4, h5, h6, li, ul, p, button, footer {
   padding: 0;
   margin: 0;
 }
@@ -36,4 +36,9 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   width: 0.7rem;
   background-color: grey;
+}
+
+
+body {
+  background-color: aliceblue;
 }
