--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,32 @@
+/* util */
+.content {
+  padding-inline: 3rem;
+  flex-basis: 70rem;
+}
+
+/* sections */
 .skills {
   background-color: aliceblue;
 
   display: flex;
   justify-content: center;
-  height: 600px;
+  padding-top: 3rem; padding-bottom: 3rem;
 }
+.skills .content .cardsSkill {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
+}
+.skills .content .titleSkill {
+  margin-top: 1rem; margin-bottom: 2rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
 
 .experiences {
   background-color: rgba(58, 112, 133, 0.75);
@@ -15,6 +37,14 @@
   justify-content: center;
   height: 500px;
 }
+.experiences .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
 .projects {
   background-color: aliceblue;
@@ -23,13 +53,39 @@
   justify-content: center;
   height: 500px;
 }
-
-
-.content {
-  padding-inline: 3rem;
-  flex-basis: 70rem;
-
+.projects .content {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+
+
+
+
+/* MEDIA QUERYS */
+@media (max-width: 1200px) {        /* OFICIAL */
+  
+}
+
+@media (max-width: 992px) {         /* OFICIAL */
+  
+}
+
+/* personal */
+@media (max-width: 825px) {
+  .skills .content .cardsSkill {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {         /* OFICIAL */
+
+}
+
+@media (max-width: 576px) {         /* OFICIAL */
+  .skills .content .cardsSkill {
+    grid-template-columns: 1fr;
+  }
 }
