--- a/components/css/Carousel.module.css
+++ b/components/css/Carousel.module.css
@@ -1,72 +1,93 @@
 .carousel {
-  background-color: cadetblue;
-
   /* responsive size */
   height: 300px;
   width: 100%;
-  max-width: 700px;
+  max-width: 800px;
   min-width: 200px;
+}
+.carousel {
+  display: grid;
+  grid-template-areas: 'left content right'
+                       '. pagination .';
+  grid-template-columns: 40px auto 40px;
+  gap: 1rem;
+}
+.carousel .pagination {
+  grid-area: pagination;
+}
+.carousel .left {
+  grid-area: left;
+}
+.carousel .content {
+  grid-area: content;
+}
+.carousel .right {
+  grid-area: right;
+}
 
-  padding-inline: 2rem;
 
-  position: relative;
+/* pagination */
+.carousel .pagination {
+  display: flex;  justify-content: center;  align-items: center;
 }
 
 /* buttons */
-.carousel .button {
-  position: absolute;
-  top: 45%;
-
+.carousel .left, .right {
+  display: flex;  justify-content: center;  align-items: center;
+}
+.button {
   width: 22px;
   height: 22px;
   object-fit: contain;
 
   padding: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.15);
+  /* background-color: rgba(0, 0, 0, 0.15); */
   backdrop-filter: blur(50%);
-  filter: brightness(0) invert(1);
-  border: 1px solid rgba(128, 128, 128, 0.5);
 }
-.carousel .button:hover {
+.button:hover {
   background-color: rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(75%);
   cursor: pointer;
 }
-
-.carousel .buttonLeft {
-  left: 1%;
+.buttonLeft {
   transform: scaleX(-1);
 }
-.carousel .buttonRight {
-  right: 1%;
-}
-
 
 /* content */
-.content {
-  width: 100%;
-  height: 100%;
-
+.carousel .content {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
-  overflow-x: hidden;
 }
-.item {
-  display: flex;  justify-content: center;  align-items: center;
-  font-size: 2rem;
-  background-color: cornflowerblue;
+.carousel .content .item {
+  display: none;
 }
-.item {
-  /* responsive size */
-  height: 200px;
-  flex-basis: 500px;
-  min-width: 200px;
-  flex-grow: 1;
-
-  transform: translateX(0%);
+.carousel .content .item[aria-selected="true"] {
+  display: block;
 }
 
-.contentItem {
+
+
+
+/* MEDIA QUERYS */
+@media (max-width: 1200px) {        /* OFICIAL */
+  
+}
+@media (max-width: 992px) {         /* OFICIAL */
+  
+}
+@media (max-width: 768px) {         /* OFICIAL */
+
+}
+@media (max-width: 576px) {         /* OFICIAL */
+  .carousel {
+    grid-template-areas: 'content content content'
+                         'left pagination right';
+    grid-template-columns: 40px auto 40px;
+  }
+}
+
+/* personal */
+@media (max-width: 500px) {
+  
 }
