--- a/components/css/Title.module.css
+++ b/components/css/Title.module.css
@@ -1,26 +1,58 @@
 .title {
-    font-size: 2.8rem;
-    padding: 1rem;
+  font-size: 2.8rem;
+  padding: 1rem;
 
-    position: relative;
+  position: relative;
 }
+
 .title::before {
-    content: '';
-    position: absolute;
+  content: '';
+  position: absolute;
 
-    top: 0; right: 40%;
+  top: 0;
+  right: 40%;
 
-    height: 2px;
-    width: 80%;
-    background-color: rgba(0, 0, 0, 0.75);
+  height: 2px;
+  width: 80%;
+  background-color: rgba(0, 0, 0, 0.75);
 }
+
 .title::after {
-    content: '';
-    position: absolute;
+  content: '';
+  position: absolute;
 
-    bottom: 0; left: 40%;
+  bottom: 0;
+  left: 40%;
 
-    height: 2px;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+  height: 2px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+
+
+/* MEDIA QUERYS */
+@media (max-width: 1200px) {
+  /* OFICIAL */
+  .title {
+    font-size: 2.7rem;
+  }
+}
+@media (max-width: 992px) {
+  /* OFICIAL */
+  .title {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 768px) {
+  /* OFICIAL */
+  .title {
+    font-size: 2.3rem;
+  }
+}
+@media (max-width: 576px) {
+  /* OFICIAL */
+  .title {
+    font-size: 2.1rem;
+  }
 }
