--- a/components/css/Carousel.module.css
+++ b/components/css/Carousel.module.css
@@ -61,9 +61,45 @@
 }
 .carousel .content .item {
   display: none;
+  position: relative;
 }
 .carousel .content .item[aria-selected="true"] {
   display: block;
+}
+
+.carousel .content .item[aria-selected="true"]::before {
+  content: '';
+  position: absolute;
+
+  top: 0; left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(240, 248, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+  
+  z-index: 3;
+  
+  animation: curtain 800ms linear 0s forwards;
+}
+.carousel .content .item[aria-selected="true"]::after {
+  content: '';
+  position: absolute;
+
+  top: 0; right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(240, 248, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border-left: 1px solid rgba(0, 0, 0, 0.25);
+
+  z-index: 3;
+  
+  animation: curtain 800ms linear 0s forwards;
+}
+@keyframes curtain {
+  0% {width: 50%;}
+  100% {width: 0%;}
 }
 
 
