--- a/components/css/CardProject.module.css
+++ b/components/css/CardProject.module.css
@@ -16,8 +16,11 @@
 
 .image {
     background-color: gray;
+    background-size: cover; background-repeat: no-repeat;
+    background-position: center;
 
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
     /* border-bottom: 1px solid rgba(58, 112, 133, 0.50);1 */
 }
 
