--- a/components/css/CardSkill.module.css
+++ b/components/css/CardSkill.module.css
@@ -80,15 +80,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 0.3rem;
-
-  background-color: rgb(51, 51, 51);
+  gap: 0.5rem;
 }
 
 .card .face2 .item h3 {
-  color: white;
+  color: rgba(0, 0, 0, 0.75);
   text-transform: uppercase;
-  font-size: 0.85rem;
+  font-size: 0.78rem;
 }
 
 /* .description {
