--- a/components/css/AccordionRow.module.css
+++ b/components/css/AccordionRow.module.css
@@ -45,6 +45,11 @@
 
 
 /* header */
+.accordion .header h2 {
+  color: rgba(0, 0, 0, 0.75);
+  text-transform: uppercase;
+  font-size: .8rem;
+}
 .accordion .header .info {
   display: flex;  justify-content: center; align-items: center;
   gap: 1rem;
@@ -56,10 +61,7 @@
   cursor: pointer;
   filter: brightness(0) invert(0.3);
 }
-.accordion .header h2 {
-  text-transform: uppercase;
-  font-size: 1rem;
-}
+
 
 /* body */
 .accordion .body {
@@ -77,6 +79,9 @@
   height: fit-content;
 
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.accordion .body p {
+  color: rgba(0, 0, 0, 0.70);
 }
 
 /* .accordion .body .content {
